# optiga-nbt-rpi-wifi-p2p

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REUSE.toml
scripts/: config_files.sh  create_NDEF_message.py  read_NDEF_message.py  socket_server_activity.py  wifi_p2p_connect.sh  wifi_p2p_revert_changes.sh  wifi_p2p_setup.sh
source/: main.c
source/utilities/: nbt-utilities.c  nbt-utilities.h
